<resources>
    <string name="app_name">ServiceTest</string>
    <string name="start_fragment_btn_asynktask">Asynk Task</string>
    <string name="start_fragment_btn_loader">Loader</string>
    <string name="start_fragment_btn_intentservice">Intent Service</string>
    <string name="start_fragment_btn_start_service">Start Service</string>
    <string name="start_fragment_btn_bind_service">Bind Service</string>
    <string name="fragment_picture_viewer_btn_load">загрузить</string>
    <string name="fragment_picture_viewer_tv_count">Загружено: %1$d</string>
    <string name="image_view_content_description">image</string>
    <string name="start_fragment_btn_rx_java">RxJava</string>
    <string name="start_fragment_btn_job_service">JobService</string>

    <string-array name="image_urls">
        <item>https://pbs.twimg.com/profile_images/378800000572082798/60fc3f55854eef3709ddb2dd37e7a022.jpeg</item>
        <item>https://i.pinimg.com/736x/f0/50/e5/f050e5e365306f2fd84b59cb3f9f5f04.jpg</item>
        <item>http://image2.thematicnews.com/uploads/topics/preview/00/04/21/45/43c86430e2_256crop.png</item>
    </string-array>
</resources>
