<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_intent_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_fragment_btn_intentservice" />

    <Button
        android:id="@+id/btn_asynk_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_fragment_btn_asynktask" />

    <Button
        android:id="@+id/btn_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_fragment_btn_loader" />

    <Button
        android:id="@+id/btn_start_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_fragment_btn_start_service" />

    <Button
        android:id="@+id/btn_bind_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_fragment_btn_bind_service" />

    <Button
        android:id="@+id/btn_rx_java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_fragment_btn_rx_java" />

    <Button
        android:id="@+id/btn_job_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_fragment_btn_job_service" />
</LinearLayout>